--- a/src/common/header/Header.css
+++ b/src/common/header/Header.css
@@ -6,3 +6,39 @@
   color: #ffffff !important;
   padding-left: 5%;
 }
+.account-circle {
+  padding-right: 10%;
+}
+.app-header {
+  background-color: #263238;
+  color: #ffffff;
+  padding: 8px 32px 8px 16px;
+}
+.searchIcon {
+  height: 100%;
+  position: absolute;
+  pointer-events: none;
+  display: flex;
+  justify-content: center;
+}
+.inputInput {
+  padding-left: 10%;
+  width: 80%;
+  color: whitesmoke !important;
+}
+
+.tabs {
+  margin-bottom: 20px;
+}
+
+.dispNone {
+  display: none;
+}
+
+.dispBlock {
+  display: block;
+}
+
+.red {
+  color: red;
+}
