Header made responsive for different screen sizes

--- a/src/common/header/Header.css
+++ b/src/common/header/Header.css
@@ -42,3 +42,15 @@
 .red {
   color: red;
 }
+.my-account-dropdown-menu-item,
+.logout-dropdown-menu-item {
+  text-decoration: none;
+  color: #000;
+  cursor: pointer;
+}
+
+@media only screen and (min-width: 768px) {
+  .login-button {
+    float: right;
+  }
+}
