--- a/src/screens/checkout/Checkout.css
+++ b/src/screens/checkout/Checkout.css
@@ -42,7 +42,7 @@
 
 .div-container {
     margin: 8px;
-    margin-left: 10%;
+    margin-left: 5%;
 }
 
 .price-container {
@@ -51,13 +51,12 @@
 
 .rupee-container {
     margin: 8px;
-    margin-left: 22%;
+    margin-left: 15%;
 }
 
 .div-items {
     min-width: 180px;
 }
-
 
 .dispNone {
     display: none;
@@ -70,7 +69,7 @@
 }
 
 .orderSummary {
-    margin: 30px 60px auto auto;
+    margin: 30px 65px auto auto;
     width: 400px;
 }
 
@@ -84,10 +83,6 @@
     color: green;
 }
 
-.grid {
-    
-}
-
 .button-container {
     margin-left: 70px;
     width: 350px;
@@ -96,4 +91,5 @@
 .button-saveAddress{
     background-color: #f50057;
     width: 20%;
+    color : white;
 }
